# Desktop-Sidebar

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/desktop_sidebar/: __init__.py  app.py  config.py  timefmt.py  windows_autostart.py
src/desktop_sidebar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/desktop_sidebar/widgets/: clock_widget.py
tests/: test_autostart.py  test_clock_widget.py  test_import.py
