[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "desktop-sidebar"
version = "0.1.0"
description = "Minimal desktop sidebar skeleton (PySide6)"
readme = "README.md"
requires-python = ">=3.10"
authors = [ { name = "Your Name" } ]
dependencies = ["PySide6>=6.5", "python-dotenv"]
